--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css2?
+        family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <title>Akan Name</title>
     </head>
-    <body></body>
+    <body>
+        <div class="container">
+            <div class="navbar">
+                <nav>
+                    <ul>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <h1>Akan Name</h1>
+                    <p>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. </p>
+                    <button type="button">Know your Akan name</button>
+                </div>
+                <div class="column"></div>
+            </div>
+        </div>
+
+    </body>
 </html>
