--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="column">
                     <h1>Akan Name</h1>
                     <p>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. </p>
+                    <h2>Know Your Akan Name!</h2>
                 </div>
                 <div class="column1"></div>
                    <form>
@@ -41,6 +42,7 @@
                    </form>
                 </div>
                 </div>
+            </div>
         </div>
       <script src="index.js"></script>
     </body>
